bdr.BDR.scala.error
Compilation error:
BDR:28: error: not found: value rrecule
   rrecule()
   ^